Changelog for Articles.

Articles 1.3.0
===============================
- Add option to Require Authentication for commenting

Articles 1.2.1
===============================
- [#6400] Fix issue where alias was not changed in articles when container's alias was changed

Articles 1.2.0
===============================
- [#6385] Fix issue with Resource Groups tab not showing for individual Articles
- [#6374] Fix issue where tags were not showing in RSS
- [#6376] Fix date formatting for RSS pub date
- [#6375] Properly send RSS headers (requires Revo 2.2-pl or later)

Articles 1.1.5
===============================
- [#6345] Fix and improve article view in front-end for default template
- [#6342] Fix issue where container content was not persistent
- [#6346] Add missing IDs to various panels in Articles UI to allow for Form Customization targeting

Articles 1.1.2/3/4
===============================
- Better handling of comment import and MODX tags in WordPress import
- More WordPress import fixes with character encodings
- [#6339] Fix import from WordPress because WordPress does not escape brackets properly from export WXR file

Articles 1.1.1
===============================
- [#6305] Rearrange TV processing advanced settings to address possible clarity issue
- [#6303] Fix issue where some settings do not set dirty status for container form when changed
- [#6324] Fix issue where import from MODX sets isfolder incorrectly
- Ensure MODX import changes Resources to new ArticlesContainer template
- Add &includeTVsList and &processTVsList advanced settings for listings
- Upgrade getResources to 1.4.2 and getPage to 1.2.2

Articles 1.1.0
===============================
- Add import from MODX
- Add import from Blogger
- Add ability to specify file on server when importing from WordPress
- [#6296] Add sortBy and sortDir settings for getResources to the Advanced Settings tab for containers
- [#6299] Ensure that if author of Article is deleted, article can still be viewed/edited
